--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ dependencies:
   image_picker: '>=0.1.2 <2.0.0'
   path_provider: ^0.4.1
   sqflite: any
+  path: any
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
