--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,7 +6,7 @@ dependencies:
     sdk: flutter
   quiver: '>=0.29.0 <0.30.0'
   image_picker: '>=0.1.2 <2.0.0'
-  path_provider: ^0.4.1
+  path_provider: ^0.3.1
   sqflite: any
   path: any
 
@@ -32,11 +32,107 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - './images/T_big_white.PNG'
-    - './images/slucks_black.PNG'
-    - './images/dress_shoes_black_martens.PNG'
-    - './images/shirtshalf_aloha.PNG'
-    - './images/denim_indigo.PNG'
+    - "example.db"
+    - "images/NB_green.PNG"
+    - "images/T_big_black.PNG"
+    - "images/T_big_white.PNG"
+    - "images/T_black.PNG"
+    - "images/T_black_print_bb8.JPEG"
+    - "images/T_black_print_jurassic.JPEG"
+    - "images/T_black_space_X.PNG"
+    - "images/T_border_wide.PNG"
+    - "images/T_gray.PNG"
+    - "images/T_long_black.PNG"
+    - "images/T_long_border.PNG"
+    - "images/T_olive.PNG"
+    - "images/T_white.PNG"
+    - "images/blouson_camel.PNG"
+    - "images/boots_darkbrown_martens.PNG"
+    - "images/cap_black.PNG"
+    - "images/cap_green.PNG"
+    - "images/chester_black.PNG"
+    - "images/chester_gray.PNG"
+    - "images/chino_beige.PNG"
+    - "images/converse_black_hi.PNG"
+    - "images/denim_blue.PNG"
+    - "images/denim_iceblue.PNG"
+    - "images/denim_indigo.PNG"
+    - "images/denim_jacket_blue.PNG"
+    - "images/denim_jacket_indigo.PNG"
+    - "images/denim_washed_gray.PNG"
+    - "images/dress_shoes_black_martens.PNG"
+    - "images/dress_shoes_suede.PNG"
+    - "images/fullzip_black.PNG"
+    - "images/fullzip_gray.PNG"
+    - "images/gachabelt_yellow.JPEG"
+    - "images/hat_black.PNG"
+    - "images/hi_darkgray.PNG"
+    - "images/hi_white.PNG"
+    - "images/knitcap_black.PNG"
+    - "images/laofers_darkbrown.PNG"
+    - "images/ma1_black.PNG"
+    - "images/ma1_gray.PNG"
+    - "images/moz_coat.PNG"
+    - "images/muji_sneaker.PNG"
+    - "images/nike_allblack.PNG"
+    - "images/nyron_jacket_white.JPG"
+    - "images/pcoat.PNG"
+    - "images/polo_fredperry.PNG"
+    - "images/polo_white.PNG"
+    - "images/pullover_black.PNG"
+    - "images/pullover_gray.PNG"
+    - "images/pullover_white.PNG"
+    - "images/pumpfury.PNG"
+    - "images/sandal.JPEG"
+    - "images/sandal.PNG"
+    - "images/shirts_check_green.PNG"
+    - "images/shirts_check_red.PNG"
+    - "images/shirts_denim_blue.PNG"
+    - "images/shirts_denim_iceblue.PNG"
+    - "images/shirts_denim_indigo.PNG"
+    - "images/shirts_gingam.PNG"
+    - "images/shirts_half_black.JPEG"
+    - "images/shirts_olive.PNG"
+    - "images/shirts_stripe.PNG"
+    - "images/shirts_white.PNG"
+    - "images/shirtshalf_aloha.PNG"
+    - "images/shirtshalf_military.PNG"
+    - "images/skinny_black.PNG"
+    - "images/slucks_black.PNG"
+    - "images/slucks_black_wide.PNG"
+    - "images/slucks_darkgray.PNG"
+    - "images/slucks_gray.PNG"
+    - "images/slucks_navy_windowpen.PNG"
+    - "images/sneaker_gray.PNG"
+    - "images/sneaker_white.PNG"
+    - "images/snood_beige.PNG"
+    - "images/sox_black.PNG"
+    - "images/sox_orange.PNG"
+    - "images/sox_red.PNG"
+    - "images/sox_white.PNG"
+    - "images/sox_wine.PNG"
+    - "images/standcollar_beige.PNG"
+    - "images/standcollar_black.PNG"
+    - "images/sukajan.PNG"
+    - "images/sweat_black.PNG"
+    - "images/sweat_gray.PNG"
+    - "images/sweat_pants_black.PNG"
+    - "images/sweater_blue.PNG"
+    - "images/sweater_gray.PNG"
+    - "images/sweater_green.PNG"
+    - "images/sweater_navy.PNG"
+    - "images/sweater_red.PNG"
+    - "images/sweater_white.PNG"
+    - "images/sweater_yellow.PNG"
+    - "images/tanktop_gray.PNG"
+    - "images/tanktop_white.PNG"
+    - "images/taylored_darkgray.PNG"
+    - "images/tote_bag.JPG"
+    - "images/turtle_gray.PNG"
+    - "images/turtle_olive.PNG"
+    - "images/watch_black.JPEG"
+    - "images/watch_brown.JPEG"
+    - "images/workshirts.PNG"
     - './icons/T_fill.png'
     - './icons/T_edge.png'
     - './icons/pants_fill.png'
